fixing VersionSwitcher demo rendering, making FillWindow have default z-index of 10

--- a/packages/shared-demo/src/style.css
+++ b/packages/shared-demo/src/style.css
@@ -69,7 +69,7 @@ h6 {
   width: 100%;
   text-align: center;
   padding: 12px 0;
-  background: #ebf1f5;
+  /* background: #ebf1f5; */
 }
 
 .demo-header h1 {
